k8s/ingress-controller/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fib-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true" # Set to true if you want to redirect HTTP to HTTPS
    nginx.ingress.kubernetes.io/rewrite-target: /$1 # URL rewrite target
spec:
  rules:
    - http:
        paths:
          - path: /be/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 4000 # Port where your service is listening
